--- a/Kinney_Review.Rmd
+++ b/Kinney_Review.Rmd
@@ -26,11 +26,14 @@ The "view" commands in the data inspection take the longest to run, and using "h
 
 #Part Two: Other Comments
 
-In your maize files, the Sample IDs of the columns are now V1, V2, V3, etc. Was this intentional?
+You might want to take a note of the number of rows and columns of the input files in the data inspection portion.
 
-In lines 158 and 162, you use "maize_i" in code for teosinte. I am not sure if you meant to do this, or if it supposed to be "teosinte_i" instead.
+In your maize files, the Sample IDs of the columns are now V1, V2, V3, etc. 
+
+In line 158, you use "maize_i" in code for teosinte. I am not sure if you meant to do this, or if it supposed to be "teosinte_i" instead.
+Line 162 also has a similar situation, with "maize_1" in a line with "teosinte_1".
 
 #Part Three: Overall
 
-Overall, the code is clean with good explanation of steps throughout. 
+Overall, the code is clean (easy to follow) with a good explanation of the steps throughout. Since no graphing code was provided, I could not review that part of the assignment.
 
